--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 jobs:
-  simple-deployment-pipeline:
+  build:
     if: ${{contains(join(toJson(github.event.commits.*.message)), '#deploy')}}
     runs-on: ubuntu-22.04
     steps:
@@ -21,7 +21,7 @@ jobs:
         run: npm run build
   tag-release:
     if: ${{ contains(join(toJson(github.event.commits.*.message)), '#deploy') }}
-    needs: [simple-deployment-pipeline]
+    needs: [build]
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4.1.5
@@ -30,3 +30,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: "patch"
+  deploy:
+    if: ${{ contains(join(toJson(github.event.commits.*.message)), '#deploy') }}
+    needs: [build]
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
+      
