--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Lint
-        run: npm run eslint
+        run: npm run lint
       - name: Build
         run: npm run build
   tag-release:
