--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 jobs:
-  build:
+  deploy:
     if: ${{contains(join(toJson(github.event.commits.*.message)), '#deploy')}}
     runs-on: ubuntu-22.04
     steps:
@@ -19,9 +19,12 @@ jobs:
         run: npm run lint
       - name: Build
         run: npm run build
+      - uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
   tag-release:
     if: ${{ contains(join(toJson(github.event.commits.*.message)), '#deploy') }}
-    needs: [build]
+    needs: [deploy]
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4.1.5
@@ -30,12 +33,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: "patch"
-  deploy:
-    if: ${{ contains(join(toJson(github.event.commits.*.message)), '#deploy') }}
-    needs: [build]
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: dist
       
