--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
     "lint": "eslint --ext .ts,.vue src --fix"
   },
   "dependencies": {
-    "three": "^0.163.0",
-    "vue": "^3.4.21"
+    "@tailwindcss/vite": "^4.1.10",
+    "vue": "^3.5.17",
+    "vue-eslint-parser": "^10.1.3"
   },
   "devDependencies": {
-    "@types/three": "^0.163.0",
-    "@typescript-eslint/parser": "^7.3.1",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.23.0",
-    "postcss": "^8.4.38",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.29.0",
+    "@typescript-eslint/parser": "^8.34.1",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.0",
+    "eslint-plugin-vue": "^10.2.0",
+    "globals": "^16.2.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
+    "vite": "^6.3.5",
     "vue-tsc": "^2.0.6"
   }
 }
